<resources>
    <string name="app_name">LSCS</string>
    <string name="title_activity_device_scan">LSCS</string>
    <string name="ble_not_supported">BLE is not supported</string>

    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>

    <string name="label_rssi"> RSSI:</string>
    <string name="label_deviceBattery"> Battery:</string>
    <string name="label_deviceFilter"> Filter:</string>

    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="Connecting">Connecting</string>


    <string name="disconnected">Disconnected</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="error_bluetooth_not_enabled">Bluetooth is not enabled.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_hot_keys_nano51822">nano51822 Hot Keys</string>
    <string name="menu_hot_keys_koso">Koso Hot Keys</string>
    <string name="menu_userMode">User mode</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_stop">Stop</string>
    <string name="add_unit_menu">Add unit</string>
    <string name="test_graphic">Test graphic</string>
    <string name="add_virtual">Add virtual user</string>

    <string name="title_activity_device_control">Device Control</string>
    <string name="title_activity_scan_result">ScanResult</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_characteristic_read_write">CharacteristicReadWrite</string>
    <string name="title_activity_characteristic_uart">Uart</string>
    <string name="title_activity_characteristic_read_write_select_dialog">
        CharacteristicReadWriteSelectDialog
    </string>
    <string name="title_activity_koso_meter">KosoMeterActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="iv1">unit1</string>
    <string name="iv2">unit2</string>

    <string name="action_stdHood">Hood</string>
    <string name="stdFullfaceMask">FullfaceMask</string>
    <string name="action_stdAsbestos">Asbestos</string>

    <string name="menu_led">Led menu</string>
    <string name="menu_led_spotreba">Spotřeba</string>
</resources>
