<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fila.ble.MainActivity">

    <item android:id="@+id/menu_refresh"
        android:checkable="false"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="" />

    <item android:id="@+id/add_unit_menu"
        android:title="@string/add_unit_menu"
        android:icon="@drawable/add_ico_bar"
        android:showAsAction="always"
        android:orderInCategory="2"

        />

    <item
        android:title="@string/menu_connect"
        android:showAsAction="always"
        android:icon="@drawable/set_ico_bar"
        android:orderInCategory="3"
        >
        <menu>

            <item android:id="@+id/menu_connect"
                android:title="@string/menu_connect"
                android:showAsAction="always"/>
            <item android:id="@+id/menu_disconnect"
                android:title="@string/menu_disconnect"
                android:showAsAction="always"/>
            <item android:id="@+id/test_graphic"
                android:title="@string/test_graphic"
                android:showAsAction="always"/>
            <item android:id="@+id/add_virtual"
                android:title="@string/add_virtual"
                android:showAsAction="always"/>
            <item android:id="@+id/menu_user"
                android:title="User"/>
            <item android:id="@+id/menu_advancedUser"
                android:title="Advanced user"/>
            <item android:id="@+id/menu_admin"
                android:title="Admin"/>

        </menu>
    </item>


</menu>