<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
      >

        <TextView
            android:id="@+id/tvDeviceAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_device_address"
            android:textSize="18sp" />
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/device_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
 >

        <TextView
            android:id="@+id/tvState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_state"
            android:textSize="18sp" />
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/connection_state"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tvRssi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rssi"
            android:textSize="18sp" />
        <Space android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/control_RSSI"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textSize="18sp"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/emptyMainListLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/mainImage"
            android:layout_width="32mm"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/luxart_logo" />

        <TextView
            android:id="@+id/mainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainImage"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="Přidat nové zařízení"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/addImage"
            android:layout_below="@+id/mainText"
            android:layout_centerHorizontal="true"
            android:layout_width="95px"
            android:layout_height="95px"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:background="#00000000"
            android:src="@drawable/add_bar" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/companyAddressLayout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addImage"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        >

        <TextView
            android:id="@+id/t1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="LUXART, s.r.o."
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t1"
            android:gravity="center"
            android:text="Blučina 627" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t2"
            android:gravity="center"
            android:text="Blučina" />

        <TextView
            android:id="@+id/t4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t3"
            android:gravity="center"
            android:text="664 56" />

        <TextView
            android:id="@+id/t5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t4"
            android:gravity="center"
            android:text="Česká Republika" />

        <TextView
            android:id="@+id/t6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t5"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="Tel. +420 731 199 599" />

        <TextView
            android:id="@+id/t7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t6"
            android:gravity="center"
            android:text="luxart@luxart.cz" />

        <TextView
            android:id="@+id/t8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t7"
            android:gravity="center"
            android:text="www.luxart.cz"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/t8"
            android:gravity="center"
            android:textStyle="bold" />





    </RelativeLayout>

    <LinearLayout
        android:id="@+id/listLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="5dp"
            android:divider="@color/frame"
            android:dividerHeight="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonAddDevice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Add device"
            android:visibility="invisible"
            />



    </LinearLayout>


    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">




        <ExpandableListView
            android:id="@+id/gatt_services_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>

